src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

html {
  background: url('/background/background.png');
  background-position: center;
  background-repeat: no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  overflow-y: scroll; 
}

.header {
  font: 40px "Century Gothic", Futura, sans-serif;
  margin: auto;
  width: 100%;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 0px;
  /* background: linear-gradient(#e66465, #9198e5); */
  color: white;
}

.menu {
  padding-bottom: 10px;
}

.menu a {
  margin-right: 45px;
  margin-left: 45px;
}

.menu_button {
  font: 14px "Century Gothic", Futura, sans-serif;
  padding: 20px;
  border: none;
  background: none;
  color: rgb(68, 67, 67);
  text-align: center;
  -webkit-transition-duration: 0.2s; /* Safari */
  transition-duration: 0.2s;
  text-decoration: none;
}

.menu_button:hover {
  color: white;
}

.card_body {
  font: 20px "Century Gothic", Futura, sans-serif;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  cursor: pointer;
  color:  rgb(68, 67, 67);
  top: -7px;

}

.card_container {
  display: grid;
  grid-template-columns: repeat(3, 350px);
  /* grid-template-columns: repeat(auto-fill, minmax(350px, 350px)); */
  grid-gap: 40px;
  justify-content: center;
  align-content: center;
  padding-top: 25px;
  padding-bottom: 25px;
}

.card_column {
  display: inline-block;
  width: 20%;
  padding: 0 25px;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
  transition: 0.3s;
  padding: 16px;
  text-align: center;
  color: black;
  border-radius: 10px;
  height: 180px;

  -webkit-transition-duration: 0.2s; /* Safari */
  transition-duration: 0.2s;
  text-decoration: none;

  position: relative;
  top: 0;
  transition: top ease 0.5s;
}

@media screen and (max-width: 1200px) {
  .card_container {
      grid-template-columns: repeat(auto-fill, minmax(350px, 350px));
  }
}

.card img{
  display: block;
  margin: auto;
  height: 130px;
}

